# elf

./: .gitignore  LICENSE  README.md  build.py  elf.py  install.py
config/: README.md  impl.py
crypt/: README.md
seed/: .gitignore  Cargo.toml
seed/src/: main.rs
